--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CDN BOOTSTRAP -->
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
-    <!-- FONT OPEN SANS -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <!-- CSS STYLES -->
     <link rel="stylesheet" href="/css/styles.css">
     <title></title>
@@ -16,5 +16,16 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Template</a>
+        <div class="container">
+            <a class="navbar-brand" href="/">Analizador Lexico</a>
+            
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <button id="btnSeparar" class="btn btn-info"><i class="fas fa-play"></i> Inicio <span
+                                class="sr-only">(current)</span></button>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
