Enviaremos la seccion de lineas junto con el editor

--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -8,24 +8,23 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <!-- ROBOTO MONO -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
     <!-- CSS STYLES -->
     <link rel="stylesheet" href="/css/styles.css">
-    <title></title>
+    <title>Analizador Léxico</title>
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">Analizador Lexico</a>
-            
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <button id="btnSeparar" class="btn btn-info"><i class="fas fa-play"></i> Inicio <span
-                                class="sr-only">(current)</span></button>
-                    </li>
-                </ul>
-            </div>
+        <a class="navbar-brand" href="/">Analizador Léxico</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <button id="btnSeparar" class="btn btn-info"><i class="fas fa-play"></i> Inicio <span
+                            class="sr-only">(current)</span></button>
+                </li>
+            </ul>
         </div>
     </nav>
