--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -9,16 +9,21 @@ body {
 }
 
 .contenedor {
-    width: 70%;
     margin: auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 
 .contenedor__form {
     display: flex;
-    justify-content: space-around;
-    margin: 15px 0px;
+    flex-direction: column;
+    width: 80%;
+}
+
+.contenedor__menu {
+    display: flex;
+    justify-content: flex-start;
+    width: 20%;
 }
 
 .titulo {
@@ -30,6 +35,35 @@ body {
     color: #2e2e2e;
 }
 
+.formulario {
+    font-size: 18px;
+    font-family: 'Roboto Mono', monospace;
+    height: 70vh;
+    width: 100%;
+    border: black;
+}
+
+.lineas {
+    font-size: 18px;
+    font-family: 'Roboto Mono', monospace;
+    width: 20%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: end;
+    border: 1px solid black;
+}
+
+.menu {
+    width: 100%;
+    height: 100%;
+    background-color:gainsboro;
+}
+
+.tabla {
+    width: 100%;
+}
+
 .pie {
     display: flex;
     align-items: center;
@@ -37,7 +71,6 @@ body {
     background-color: #2E2E2E;
     height: 100px;
     width: 100%;
-    margin-top: 50px;
 }
 
 .pie p {
