--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -1,3 +1,10 @@
 <div class="menu">
-    Hola
+    <h1 class="titulo">Ejemplos</h1>
+    <ul class="list-group">
+        <li class="list-group-item">Condicionales</li>
+        <li class="list-group-item">Estructuras</li>
+        <li class="list-group-item">Metodos</li>
+        <li class="list-group-item">Fuciones</li>
+        <li class="list-group-item">Tiempo</li>
+    </ul>
 </div>
