--- a/src/views/components/table.ejs
+++ b/src/views/components/table.ejs
@@ -1,5 +1,5 @@
-<table class="table table-bordered table-hover tabla">
-    <thead class="thead-dark">
+<table class="table table-hover tabla">
+    <thead class="thead-gray">
         <tr>
             <th scope="col">#</th>
             <th scope="col">Token</th>
