--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -1,5 +1,5 @@
     <footer class="pie">
-        <p>App © 2020 - Derechos Reservados</p> 
+        <p>Mettaton © 2020 - Derechos Reservados</p> 
     </footer>
 
 </body>
