--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -25,6 +25,10 @@
                     <button id="btnSeparar" class="btn btn-info"><i class="fas fa-play"></i> Inicio <span
                             class="sr-only">(current)</span></button>
                 </li>
+                <li class="nav-item active">
+                    <button id="btnLimpiar" class="btn btn-info"><i class="fas fa-trash"></i> Limpiar <span
+                            class="sr-only">(current)</span></button>
+                </li>
             </ul>
         </div>
     </nav>
