--- a/src/views/components/table.ejs
+++ b/src/views/components/table.ejs
@@ -1,12 +1,14 @@
-<table class="table table-hover tabla">
-    <thead class="thead-gray">
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Token</th>
-            <th scope="col">Descripción</th>
-            <th scope="col">Linea</th>
-        </tr>
-    </thead>
-    <tbody id="resultado">
-    </tbody>
-</table>
+<div class="table-wrapper-scroll-y my-custom-scrollbar">
+    <table class="table table-hover">
+        <thead class="thead-gray">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Token</th>
+                <th scope="col">Descripción</th>
+                <th scope="col">Linea</th>
+            </tr>
+        </thead>
+        <tbody id="resultado">
+        </tbody>
+    </table>
+</div>
