--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -1,10 +1,10 @@
 <div class="menu">
     <h1 class="titulo">Ejemplos</h1>
     <ul class="list-group">
-        <li class="list-group-item">Condicionales</li>
-        <li class="list-group-item">Estructuras</li>
-        <li class="list-group-item">Metodos</li>
-        <li class="list-group-item">Fuciones</li>
-        <li class="list-group-item">Tiempo</li>
+        <li class="list-group-item menu__list" id="Condicional">Condicionales</li>
+        <li class="list-group-item menu__list" id="Estructuras">Estructuras</li>
+        <li class="list-group-item menu__list" id="Metodos">Metodos</li>
+        <li class="list-group-item menu__list" id="Funciones">Fuciones</li>
+        <li class="list-group-item menu__list" id="Tiempo">Tiempo</li>
     </ul>
 </div>
