Iniciamos el analizador sintactico

--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -22,7 +22,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <button id="btnSeparar" class="btn btn-info"><i class="fas fa-play"></i> Inicio <span
+                    <button id="btnSeparar" class="btn btn-info"><i class="fas fa-play"></i> Separar <span
+                            class="sr-only">(current)</span></button>
+                </li>
+                <li class="nav-item active">
+                    <button id="btnCompilar" class="btn btn-info"><i class="fas fa-play"></i> Compilar <span
                             class="sr-only">(current)</span></button>
                 </li>
                 <li class="nav-item active">
