--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -12,25 +12,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
     <!-- CSS STYLES -->
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Analizador Léxico</title>
+    <title>Mettaton</title>
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Analizador Léxico</a>
+        <a class="navbar-brand" href="/">Mettaton</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <button id="btnSeparar" class="btn btn-info"><i class="fas fa-play"></i> Separar <span
-                            class="sr-only">(current)</span></button>
-                </li>
-                <li class="nav-item active">
                     <button id="btnCompilar" class="btn btn-info"><i class="fas fa-play"></i> Compilar <span
-                            class="sr-only">(current)</span></button>
-                </li>
-                <li class="nav-item active">
-                    <button id="btnLimpiar" class="btn btn-info"><i class="fas fa-trash"></i> Limpiar <span
                             class="sr-only">(current)</span></button>
                 </li>
             </ul>
