--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -8,6 +8,7 @@ body {
     font-size: 18px;
 }
 
+/* Contenedores */
 .contenedor {
     margin: auto;
     width: 100%;
@@ -26,7 +27,9 @@ body {
     justify-content: flex-start;
     width: 20%;
 }
+/* Contenedores */
 
+/* Titulos */
 .titulo {
     display: flex;
     justify-content: center;
@@ -35,7 +38,9 @@ body {
     font-size: 20px;
     color: #2e2e2e;
 }
+/* Titulos */
 
+/* Area de texto */
 .formulario {
     font-size: 16px;
     font-family: 'Roboto Mono', monospace;
@@ -44,7 +49,9 @@ body {
     height: 100%;
     border: black;
 }
+/* Area de texto */
 
+/* Numero de lineas */
 .lineas {
     font-size: 16px;
     font-family: 'Roboto Mono', monospace;
@@ -59,7 +66,9 @@ body {
     border-left: 1px solid black;
     border-right: 1px solid black;
 }
+/* Numero de lineas */
 
+/* Menu de ejemplos */
 .menu {
     width: 100%;
     height: 100%;
@@ -75,16 +84,51 @@ body {
     cursor: pointer;
     text-decoration: underline;
 }
+/* Menu de ejemplos */
 
+/* Scroll para tabla */
 .my-custom-scrollbar {
     position: relative;
     height: 300px;
     overflow: auto;
 }
+/* Scroll para tabla */
+
+/* Terminal integrada del compilador */
+.menu_terminal {
+    position: relative;
+}
+
+.nav_menu {
+    display: flex;
+    height: 50px;
+}
+
+.nav_menu p{
+    align-items: center;
+}
+/* Terminal integrada del compilador */
+
+/* Tabla del analisis lexico */
+.tabla_hide {
+    transform: translateX(-1800px);
+}
 
 .table-wrapper-scroll-y {
     display: block;
 }
+/* Tabla del analisis lexico */
+
+/* Problemas del analisis sintactico */
+.sintactico {
+    display: block;
+    position: absolute;
+    background-color: #f8f9fa;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-220px);
+}
+/* Problemas del analisis sintactico */
 
 /* ---------------------scrollbar---------------------*/
 ::-webkit-scrollbar {
@@ -103,6 +147,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
     background: rgba(255, 255, 255, 0.699);
 }
+/* ---------------------scrollbar---------------------*/
 
 .pie {
     display: flex;
