--- a/src/views/components/table.ejs
+++ b/src/views/components/table.ejs
@@ -1,4 +1,4 @@
-<div class="table-wrapper-scroll-y my-custom-scrollbar">
+<div class="table-wrapper-scroll-y my-custom-scrollbar tabla" id="tablaLex">
     <table class="table table-hover">
         <thead class="thead-gray">
             <tr>
