--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,8 +11,34 @@
             <%-include ('components/lineas.ejs') %>
             <%-include ('components/form.ejs') %>
         </div>
-        <%-include ('components/table.ejs') %>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light nav_menu">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+
+                <li class="nav-item active">
+                    <button class="btn btn-light" id="btnLexico">Léxico</button>
+                </li>
+
+                <li class="nav-item  active">
+                    <button class="btn btn-light" id="btnSintactico">Sintáctico</button>
+                </li>
+
+                </ul>
+            </div>
+        </nav>
+
+        <div class="menu_terminal">
+            <%-include ('components/sintactico.ejs') %>
+            <%-include ('components/table.ejs') %>
+        </div>
+        
     </div>
+
+</div>
+
+<div class="contenedor">
+
 
 </div>
 
