--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -126,7 +126,11 @@ body {
     background-color: #f8f9fa;
     width: 100%;
     height: 100%;
-    transform: translateX(-220px);
+    transform: translateX(-1800px);
+}
+
+.sintactico_show {
+    transform: translateX(0);
 }
 /* Problemas del analisis sintactico */
 
