--- a/src/views/components/sintactico.ejs
+++ b/src/views/components/sintactico.ejs
@@ -1,3 +1,3 @@
-<div class="sintactico">
-    <p id="lblproblemas">Esto es un problema</p>
+<div class="sintactico"  id="proSintactico">
+    <p id="lblproblemas"></p>
 </div>
