El boton sintactico de la terminal cambia de color cuando hay un error

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -132,6 +132,14 @@ body {
 .sintactico_show {
     transform: translateX(0);
 }
+
+.txtrojo {
+    color: red;
+}
+
+.txtnegro {
+    color: #1a1a1a;
+}
 /* Problemas del analisis sintactico */
 
 /* ---------------------scrollbar---------------------*/
