--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,8 +20,8 @@
                     <button class="btn btn-light" id="btnLexico">Léxico</button>
                 </li>
 
-                <li class="nav-item  active">
-                    <button class="btn btn-light" id="btnSintactico">Sintáctico</button>
+                <li class="nav-item active">
+                    <button class="btn btn-light txtnegro" id="btnSintactico">Sintáctico</button>
                 </li>
 
                 </ul>
