Iniciamos a programar el semantico, ya llevamos 5 reglas

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,7 +21,7 @@
                 </li>
 
                 <li class="nav-item active">
-                    <button class="btn btn-light txtnegro" id="btnSintactico">Sintáctico</button>
+                    <button class="btn btn-light txtnegro" id="btnSintactico">Problemas</button>
                 </li>
 
                 </ul>
