Probaremos ejecutar .bat

--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
     <!-- CSS STYLES -->
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- File saver -->
+    <script src="/js/filesaver.js"></script>
     <title>Mettaton</title>
 </head>
 
@@ -23,6 +25,9 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <button id="btnCompilar" class="btn btn-info"><i class="fas fa-play"></i> Compilar <span
+                            class="sr-only">(current)</span></button>
+
+                    <button id="btnGuardar" class="btn btn-info"><i class="fas fa-play"></i> Guardar <span
                             class="sr-only">(current)</span></button>
                 </li>
             </ul>
