--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -49,6 +49,15 @@ body {
     height: 100%;
     border: black;
 }
+
+.formulario2 {
+    font-size: 16px;
+    font-family: 'Roboto Mono', monospace;
+    height: 70vh;
+    width: 100%;
+    height: 450px;
+    border-style: 2px black;
+}
 /* Area de texto */
 
 /* Numero de lineas */
