Terminamos de traducir los relevadores

--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -6,5 +6,34 @@
         <li class="list-group-item menu__list" id="Metodos">Metodos</li>
         <li class="list-group-item menu__list" id="Funciones">Fuciones</li>
         <li class="list-group-item menu__list" id="Tiempo">Tiempo</li>
+        <li class="list-group-item menu__list" id="Tiempo">
+            <label for="ardu_port">Puerto COM</label>
+            <select class="custom-select" name="port" id="ardu_port">
+                <option value="COM2">COM2</option>
+                <option value="COM3">COM3</option>
+                <option value="COM4">COM4</option>
+            </select>
+        </li>
+        <li class="list-group-item menu__list" id="Tiempo">
+            <label for="placa">Placa Arduino</label>
+            <select class="custom-select" name="port" id="placa">
+                <option value="1">Arduino Uno</option>
+                <option value="2">Arduino Leonardo</option>
+                <option value="3">Arduino Esplora</option>
+                <option value="4">Arduino Micro</option>
+                <option value="5">Arduino Duemilanove (328)</option>
+                <option value="6">Arduino Duemilanove (168)</option>
+                <option value="7">Arduino Nano (328)</option>
+                <option value="8">Arduino Nano (168)</option>
+                <option value="9">Arduino Mini (328)</option>
+                <option value="10">Arduino Mini (168)</option>
+                <option value="11">Arduino Pro Mini (168)</option>
+                <option value="12">Arduino Pro Mini (168)</option>
+                <option value="13">Arduino Mega 2560</option>
+                <option value="14">Arduino Mega 8</option>
+                <option value="15">Microduino Core+ (644p)</option>
+                <option value="16">Freematics OBD-II Adapter (644p)</option>
+            </select>
+        </li>
     </ul>
 </div>
